<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_myBoard">My Board</string>
    <string name="title_newReminder">New Reminder</string>
    <string name="title_notifications">Notifications</string>
    <string name="ask_remember">What do you want to remember to do?</string>
    <string name="example_remember">Take my pill</string>
    <string name="ask_when">When do you want to it?</string>
    <string name="ask_time">At what time?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="set_time">Set time</string>
</resources>