<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logobrain"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_remember"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/ask_size"
            />

        <EditText
            android:id="@+id/recordatorio_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/example_remember"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_when"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/ask_size"
            android:layout_marginTop="10dp"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday"
                    android:textSize="@dimen/ask_size"
                    />

                <CheckBox
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/days_margin"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    android:textSize="@dimen/ask_size"
                    />

                <CheckBox
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/days_margin"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"
                    android:textSize="@dimen/ask_size"
                    />

                <CheckBox
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/days_margin"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    android:textSize="@dimen/ask_size"
                    />

                <CheckBox
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/days_margin"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:textSize="@dimen/ask_size"
                    />

                <CheckBox
                    android:id="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/days_margin"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"
                    android:textSize="@dimen/ask_size"
                    />

                <CheckBox
                    android:id="@+id/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/days_margin"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"
                    android:textSize="@dimen/ask_size"
                    />

                <CheckBox
                    android:id="@+id/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/days_margin"
                    />
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_time"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/ask_size"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/tiempo_boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="Set time"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/agregarNota_boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add note"
            android:layout_gravity="center"
            />

        </LinearLayout>
    </ScrollView>

</LinearLayout>